--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,13 @@
+#
+# CMakeLists.txt
+# ~~~~~~~~~~~~~~~~~~~
+#
+# Copyright (C) 2025 Artyom Kolpakov <ddvamp007@gmail.com>
+#
+# Licensed under GNU GPL-3.0-or-later.
+# See file LICENSE or <https://www.gnu.org/licenses/> for details.
+#
+
 cmake_minimum_required(VERSION 4.1)
 
 project(
